--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -1,44 +1,129 @@
-name: Substr CI
+name: C++ CI
 
 on:
   pull_request
 
 jobs:
   formatting-check:
-    name: Formatting Check
+    name: Formatting check
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Run clang-format style check for C/C++/Protobuf programs.
-        uses: jidicula/clang-format-action@v4.9.0
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Check line breaks
+        run: |
+          sudo apt-get install -y dos2unix
+          pushd $GITHUB_WORKSPACE
+          ci-extra/check-lines.sh
+          popd
+      - name: Run clang-format style check
+        # TODO use clang-format from a container
+        uses: jidicula/clang-format-action@v4.11.0
         with:
-          clang-format-version: '15'
+          clang-format-version: '17'
           check-path: '.'
 
-  tests:
+  test:
     needs: formatting-check
-    name: Testing substr
-    runs-on: ubuntu-22.04
+    name: "Test (${{ matrix.toolchain.name }}, ${{ matrix.build_type }})"
+
     strategy:
+      fail-fast: false
       matrix:
-        # clang-14 uses dwarf-5 which valgrind doesn't support yet
-        compilerSetter: [ CC=gcc CXX=g++, CC=clang CXX='clang++ -gdwarf-4 -stdlib=libc++' ASAN_OPTIONS=alloc_dealloc_mismatch=0 ]
+        toolchain:
+          - { name: Linux/GCC,   os: ubuntu-22.04, compiler: gcc-13 }
+          - { name: Linux/Clang, os: ubuntu-22.04, compiler: clang-18 }
+          - { name: macOS,       os: macos-13,     compiler: appleclang-18 }
+          - { name: macOS M1,    os: macos-14,     compiler: appleclang-18 }
+          - { name: Windows,     os: windows-2022, compiler: msvc-2022 }
+        build_type:
+          - Release
+          - Debug
+          - RelWithDebInfo
+          - Sanitized
+          - SanitizedDebug
+          # - ThreadSanitized
+        exclude:
+          # Valgrind is only supported by Linux container
+          - toolchain: { name: macOS }
+            build_type: RelWithDebInfo
+          - toolchain: { name: macOS M1 }
+            build_type: RelWithDebInfo
+          - toolchain: { name: Windows }
+            build_type: RelWithDebInfo
+          # TSAN is only supported by GCC and Clang
+          - toolchain: { name: Windows }
+            build_type: ThreadSanitized
+
+    runs-on: ${{ matrix.toolchain.os }}
+
+    container:
+      image:
+        ${{
+        contains(matrix.toolchain.os, 'ubuntu') &&
+        format('ghcr.io/cpp-kt/ubuntu:{0}', matrix.toolchain.compiler) ||
+        null
+        }}
+
+    defaults:
+      run:
+        shell: bash
+
     steps:
-      - name: dependencies
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Setup Cpp
+        if: ${{ !contains(matrix.toolchain.os, 'ubuntu') }}
+        uses: aminya/setup-cpp@v1
+        with:
+          compiler: ${{ matrix.toolchain.compiler }}
+          vcvarsall: ${{ contains(matrix.toolchain.os, 'windows') }}
+          ninja: true
+          cmake: true
+
+      - name: Setup Haskell
+        uses: haskell-actions/setup@v2
+        with:
+          enable-stack: true
+
+      - name: Update tests
         run: |
-          sudo apt install binutils gcc g++ clang cmake
-          sudo apt install haskell-stack netbase
-      - uses: actions/checkout@v3
-      - name: setup tests
+          chown $(id -u):$(id -g) .
+          git config --global user.name "John Doe"
+          git config --global user.email johndoe@example.com
+          source ci-extra/set-upstream.sh
+          git remote add upstream "https://github.com/$UPSTREAM_REPO.git"
+          git fetch upstream master
+          if git merge-base --is-ancestor upstream/master @; then
+            echo 'Tests are already up-to-date.'
+            echo 'TESTS_UPDATED=0' >> $GITHUB_ENV
+          else
+            echo 'Updating tests...'
+            git rebase upstream/master
+            echo 'Tests updated.'
+            echo 'TESTS_UPDATED=1' >> $GITHUB_ENV
+          fi
+
+      - name: Build CMake project
+        run: |
+          ci-extra/build.sh ${{ matrix.build_type }}
+
+      - name: Build tests
         run: |
           pushd test
           stack build
           popd
-      - name: build
-        run: ${{ matrix.compilerSetter }} bash build.sh
-      - name: run debug tests
-        run: stack run _build_debug_san/solution
-      - name: run rwdi tests
-        run: stack run _build_rwdi_san/solution
-      - name: run release tests
-        run: stack run _build_release/solution
+
+      - name: Run tests
+        run: |
+          if [[ $TESTS_UPDATED -eq 1 ]]; then
+            echo -e '\e[0;33mWARNING: Running a newer version of the tests than you have pushed.\e[0m'
+          fi
+          ci-extra/test.sh ${{ matrix.build_type }}
+
+      - name: Run tests with valgrind
+        if: ${{ matrix.build_type == 'RelWithDebInfo' }}
+        run: ci-extra/test-valgrind.sh ${{ matrix.build_type }}
