--- a/test/package.yaml
+++ b/test/package.yaml
@@ -1,13 +1,10 @@
-name:                hask-hello-world
+name:                substr-test
 version:             0.1.0.0
-github:              "githubuser/hask-hello-world"
+github:              "githubuser/substr-test"
 license:             BSD3
 author:              "Author name here"
 maintainer:          "example@example.com"
 copyright:           "2020 Author name here"
-
-extra-source-files:
-- README.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -16,7 +13,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/hask-hello-world#readme>
+description:         Please see the README on GitHub at <https://github.com/githubuser/substr-test#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -29,7 +26,7 @@ library:
     - directory
 
 executables:
-  hask-hello-world-exe:
+  substr-test-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -37,4 +34,4 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - hask-hello-world
+    - substr-test
