--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -38,7 +38,7 @@ jobs:
         build_type:
           - Release
           - Debug
-          - RelWithDebInfo
+          # - RelWithDebInfo
           - Sanitized
           - SanitizedDebug
           # - ThreadSanitized
