--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -6,21 +6,20 @@ on:
 jobs:
   formatting-check:
     name: Formatting check
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, ubuntu]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Check line breaks
         run: |
-          sudo apt-get install -y dos2unix
           pushd $GITHUB_WORKSPACE
           ci-extra/check-lines.sh
           popd
       - name: Run clang-format style check
-        # TODO use clang-format from a container
-        uses: jidicula/clang-format-action@v4.13.0
+        # TODO use native clang-format
+        uses: jidicula/clang-format-action@v4.14.0
         with:
-          clang-format-version: '18'
+          clang-format-version: '19'
           check-path: '.'
 
   test:
@@ -31,11 +30,8 @@ jobs:
       fail-fast: false
       matrix:
         toolchain:
-          - { name: Linux/GCC,   os: ubuntu-24.04, compiler: gcc-14 }
-          - { name: Linux/Clang, os: ubuntu-24.04, compiler: clang-19 }
-          - { name: macOS,       os: macos-13,     compiler: appleclang-19 }
-          - { name: macOS M1,    os: macos-14,     compiler: appleclang-19 }
-          - { name: Windows,     os: windows-2022, compiler: msvc-2022 }
+          - { name: Linux/GCC,   compiler: gcc-14 }
+          - { name: Linux/Clang, compiler: clang-19 }
         build_type:
           - Release
           - Debug
@@ -43,29 +39,8 @@ jobs:
           - Sanitized
           - SanitizedDebug
           # - ThreadSanitized
-        exclude:
-          # Valgrind is only supported by Linux container
-          - toolchain: { name: macOS }
-            build_type: RelWithDebInfo
-          - toolchain: { name: macOS M1 }
-            build_type: RelWithDebInfo
-          - toolchain: { name: Windows }
-            build_type: RelWithDebInfo
-          # TSAN is only supported by GCC and Clang
-          - toolchain: { name: Windows }
-            build_type: ThreadSanitized
 
-    runs-on: ${{ matrix.toolchain.os }}
-
-    container:
-      image:
-        ${{
-        contains(matrix.toolchain.os, 'ubuntu') &&
-        format('ghcr.io/cpp-kt/ubuntu:{0}', matrix.toolchain.compiler) ||
-        null
-        }}
-      options:
-        --security-opt seccomp=unconfined
+    runs-on: [self-hosted, ubuntu, "${{ matrix.toolchain.compiler }}", ghc]
 
     defaults:
       run:
@@ -76,46 +51,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Setup Cpp
-        if: ${{ !contains(matrix.toolchain.os, 'ubuntu') }}
-        uses: aminya/setup-cpp@v1
-        with:
-          compiler: ${{ matrix.toolchain.compiler }}
-          vcvarsall: ${{ contains(matrix.toolchain.os, 'windows') }}
-          ninja: true
-          cmake: true
-
-      - name: Setup Haskell Stack using apt-get
-        if: ${{ contains(matrix.toolchain.os, 'ubuntu') }}
-        run: |
-          apt-get update -qq
-          apt-get install -y haskell-stack
-          chown $(id -u):$(id -g) ~
-
-      - name: Setup Haskell Stack using haskell-actions/setup
-        if: ${{ !contains(matrix.toolchain.os, 'ubuntu') }}
-        uses: haskell-actions/setup@v2
-        with:
-          enable-stack: true
-
-      - name: Update tests
-        run: |
-          chown $(id -u):$(id -g) .
-          git config --global user.name "John Doe"
-          git config --global user.email johndoe@example.com
-          source ci-extra/set-upstream.sh
-          git remote add upstream "https://github.com/$UPSTREAM_REPO.git"
-          git fetch upstream master
-          if git merge-base --is-ancestor upstream/master @; then
-            echo 'Tests are already up-to-date.'
-            echo 'TESTS_UPDATED=0' >> $GITHUB_ENV
-          else
-            echo 'Updating tests...'
-            git rebase upstream/master
-            echo 'Tests updated.'
-            echo 'TESTS_UPDATED=1' >> $GITHUB_ENV
-          fi
 
       - name: Build CMake project
         run: |
@@ -129,9 +64,6 @@ jobs:
 
       - name: Run tests
         run: |
-          if [[ $TESTS_UPDATED -eq 1 ]]; then
-            echo -e '\e[0;33mWARNING: Running a newer version of the tests than you have pushed.\e[0m'
-          fi
           ci-extra/test.sh ${{ matrix.build_type }}
         timeout-minutes: 1
 
